--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -27,6 +27,6 @@ jobs:
           api_key: b983b8fb-e108-483a-bcd7-fdabdb16944a
           test_format: JUNIT
           test_framework: JUNIT
-          test_path: junit.xml
+          test_path: ./build/test-results/test/TEST-io.thundra.foresight.quotes.QuotesServiceTest.xml
           coverage_format: JACOCO/XML
           coverage_path: ./build/reports/jacoco/test/jacocoTestReport.xml
