--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,7 +12,7 @@ jobs:
         uses: runforesight/foresight-workflow-kit-action@v1
         if: success() || failure()
         with:
-          api_key: b983b8fb-e108-483a-bcd7-fdabdb16944a
+          api_key: ${{ secrets.THUNDRA_APIKEY }}
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
         with:
@@ -24,7 +24,7 @@ jobs:
         if: success() || failure()
         uses: runforesight/foresight-test-kit-action@v1
         with:
-          api_key: b983b8fb-e108-483a-bcd7-fdabdb16944a
+          api_key: ${{ secrets.THUNDRA_APIKEY }}
           test_format: JUNIT
           test_framework: JUNIT
           test_path: ./build/test-results/test/TEST-io.thundra.foresight.quotes.QuotesServiceTest.xml
